get rendering working